Changes for scrollbar and button issue

--- a/app/static/chatbot.css
+++ b/app/static/chatbot.css
@@ -45,7 +45,7 @@ body {
 
 .chatbot .chatbox {
   overflow-y: auto;
-  height: 410px;
+  height: calc(100vh - 30vh);
   padding: 30px 20px 100px;
 }
 
